--- a/vignettes/session_lab.Rmd
+++ b/vignettes/session_lab.Rmd
@@ -19,7 +19,7 @@ always_allow_html: true
 1. Fit Poisson, NB, and zero-inflated loglinear models
 2. Perform nested deviance test for model selection
 3. Make diagnostic plots of loglinear models
-
+4. Visually assess multicollinearity among predictors
 
 # Load the needle-sharing dataset
 
@@ -33,12 +33,12 @@ needledat2 <- needledat %>%
                   ethn %in% c("White", "AA", "Hispanic") &
                   !is.na(homeless)) %>%
   mutate(
-    homeless = recode(homeless, "0" = "no", "1" = "yes"),
-    hiv = recode(
+    homeless = recode_factor(homeless, "0" = "no", "1" = "yes"),
+    hiv = recode_factor(
       hivstat,
       "0" = "negative",
       "1" = "positive",
-      "2" = "yes"
+      "2" = "positive"
     )
   )
 ```
@@ -46,13 +46,12 @@ needledat2 <- needledat %>%
 # Compare the mean to the variance of the outcome variable. Calculate what fraction of the counts are zero.
 
 ```{r}
-meanvarzeros <- needledat2 %>% 
-  filter(complete.cases(shared_syr)) %>%
-summarise(
-  mean = mean(shared_syr),
-  var = var(shared_syr),
-  fraczero = (sum(shared_syr == 0) / length(shared_syr))
-)
+meanvarzeros <- filter(needledat2,!is.na(shared_syr)) %>%
+  summarise(
+    mean = mean(shared_syr),
+    var = var(shared_syr),
+    fraczero = sum(shared_syr == 0) / n()
+  )
 meanvarzeros
 ```
 
@@ -64,7 +63,7 @@ This was done in the lecture using base R, but let's do it here with ggplot2. No
 
 ```{r}
 library(ggplot2)
-filter(needledat2, complete.cases(shared_syr)) %>%
+filter(needledat2, !is.na(shared_syr)) %>%
   ggplot(aes(x = shared_syr)) +
   geom_histogram(binwidth = 1)
 ```
@@ -84,27 +83,63 @@ fit.pois <- glm(shared_syr ~ sex + ethn + homeless,
 
 ```{r}
 library(MASS)
-fit.negbin <- MASS::glm.nb(shared_syr ~ sex + ethn + homeless,
-                           data = needledat2)
+fit.negbin <- glm.nb(shared_syr ~ sex + ethn + homeless,
+                data = needledat2)
 ```
 
 ## Zero-inflated Poisson
 
+The `|1` creates an intercept-only zero inflation model. Substitute it with a variable name to add that variable to the count model, and use regular model formula syntax to create any zero-inflation logistic regression model you want. Or omit the `|` for a full zero-inflation model.
+
 ```{r}
 library(pscl)
-fit.ZIpois <- pscl::zeroinfl(shared_syr ~ sex + ethn + homeless | 1,
-                       dist = "poisson",
-                       data = needledat2)
+fit.ZIpoisfull <- zeroinfl(shared_syr ~ sex + ethn + homeless,
+                data = needledat2,
+                dist = "poisson")
 ```
 
-## Intercept-only ZI model
+## Intercept-only ZI Poisson model
 
 ```{r}
-fit.ZInegbin <-
-  pscl::zeroinfl(shared_syr ~ sex + ethn + homeless | 1,
-           dist = "negbin",
-           data = needledat2)
+fit.ZIpois <- zeroinfl(shared_syr ~ sex + ethn + homeless | 1,
+                data = needledat2,
+                dist = "poisson")
 ```
+
+## Intercept-only ZI Negative Binomial model
+
+```{r}
+fit.ZInegbin <- zeroinfl(shared_syr ~ sex + ethn + homeless | 1,
+                data = needledat2,
+                dist = "negbin")
+```
+
+## Make a boxplot of needle sharing by homelessness (and other predictors)
+
+```{r}
+ggplot(needledat2, aes(x = ethn, y = shared_syr)) +
+  geom_boxplot(varwidth = TRUE)
+```
+
+# Assess whether there may be multicollinearity among the predictors
+
+```{r}
+mm <- model.matrix(~ sex + ethn + homeless, data = needledat2)
+plot(hclust(as.dist(1 - cor(mm[, -1]))))
+library(pheatmap)
+pheatmap(mm[, -1],
+         clustering_distance_cols = "correlation",
+         clustering_distance_rows = "correlation")```
+
+```{r}
+mm <- model.matrix(~ . - id - shsyryn, data = needledat2)[, -1] #[, -1] gets rid of intercept
+plot(hclust(as.dist(1 - cor(mm))))
+library(pheatmap)
+pheatmap(mm,
+         clustering_distance_cols = "correlation",
+         clustering_distance_rows = "correlation")
+```
+
 
 # Use chi-square nested deviance tests to assess which model seems to fit best.
 
@@ -119,29 +154,29 @@ logLik(fit.ZInegbin)
 
 Just to demonstrate a fancier way that could be used on many models, I'll create a list of model objects:
 ```{r}
-listofmodels <- list(
-  poisson = fit.pois,
-  negbin = fit.negbin,
-  ZIpois = fit.ZIpois,
-  ZInegbin = fit.ZInegbin
-)
+listoffits <-
+  list(
+    pois = fit.pois,
+    negbin = fit.negbin,
+    ZIpois = fit.ZIpois,
+    ZInegbin = fit.ZInegbin
+  )
 ```
 
 Then demonstrate how the `lapply` (also related functions like `sapply`) can be used to implicitly loop over elements of a list, to do exactly the same thing:
 ```{r}
-lapply(listofmodels, logLik)
+lapply(listoffits, logLik)
 ```
 
 OK now to actually answer the question. Just to get an idea of how big a difference in $-2 \times log(likelihood)$ would be statistically significant on one difference of degrees of freedom:
 
 ```{r}
-qchisq(p=0.95, df = 1)  #critical value is 3.84
-qchisq(p=0.05, df = 1, lower.tail = FALSE) #equivalent
+qchisq(0.95, df = 1)
 ```
 
 Or two degrees of freedom:
 ```{r}
-qchisq(p=0.95, df = 2)  #critical value is 6
+qchisq(0.95, df = 2)
 ```
 
 All the differences in double log-likelihoods above are _much_ larger (in the hundreds) than these critical significance values, except for the difference between Negative Binomial and zero-inflated negative binomial models. So it doesn't look like zero inflation helped the Negative Binomial distribution model, but it helped the Poisson model, and the Negative Binomial model fits better than the Poisson model.
@@ -176,22 +211,22 @@ Although we saw some evidence from the chi-square test that the Negative Binomia
 Note, the line `par(mfrow=c(1, 2))` only works for base graphics (not ggplot2), and creates a 1 row by 2 column plot panel. 
 
 ```{r}
-par(mfrow=c(1, 2))
-for (i in seq_along(listofmodels)){
-  plotpanel1(listofmodels[[i]], main = names(listofmodels)[i])
-  plotpanel2(listofmodels[[i]], main = names(listofmodels)[i])
+par(mfrow=c(4, 2))
+for (i in seq_along(listoffits)){
+  plotpanel1(listoffits[[i]], main = names(listoffits)[i])
+  plotpanel2(listoffits[[i]], main = names(listoffits)[i])
 }
 ```
 
 # Plot predicted and observed counts
 
-Here is a tibble that we can use to make histograms, density plots, etc.
+Here is a `data.frame` that we can use to make histograms, density plots, etc.
 ```{r}
-preds <- tibble(observed = fit.pois$y,
-           poisson = predict(fit.pois),
-           negbin = predict(fit.negbin),
-           ZIpois = predict(fit.ZIpois),
-           ZInegbin = predict(fit.ZInegbin))
+preds <- data.frame(observed = fit.pois$y,
+                    poisson = predict(fit.pois),
+                    negbin = predict(fit.negbin),
+                    ZIpois = predict(fit.ZIpois),
+                    ZInegbin = predict(fit.ZInegbin))
 ```
 
 Just to help with pivoting, let's pivot this into long-format:
@@ -201,13 +236,21 @@ preds.long <- pivot_longer(preds, everything())
 
 What did this do?
 ```{r}
-preds.long
+summary(preds.long)
 ```
 
+Boxplot
 ```{r}
-ggplot(preds.long, aes(x=value)) +
+ggplot(preds.long, aes(x = name, y = value)) + geom_boxplot()
+```
+
+Histogram with facet_wrap
+```{r}
+ggplot(preds.long, aes(x = value)) + 
   facet_wrap(~name) +
   geom_histogram(binwidth = 1)
 ```
 
 We can see that none of the models come close to modeling the extreme observed counts of 30+. In reality, these might require a more complex mixture model: for example a mixture of zero-inflation plus two different count distributions, one with a much higher mean. This is beyond the scope of the course, but it is possible to fit more complex mixture models that could fit this dataset better. 
+
+
